parser.output
Terminals unused in grammar

    TM_LEFT_BRACE
    TM_RIGHT_BRACE
    TM_LOOP_INIT
    TM_LOOP_BODY
    TM_MALLOC
    TM_RI
    TM_RC
    TM_WI
    TM_WC
    TM_THEN
    TM_WHILE
    TM_DO


State 61 conflicts: 2 shift/reduce
State 64 conflicts: 1 shift/reduce


Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_CMD

    2 NT_CMD: TM_VAR TM_IDENT
    3       | NT_EXPR TM_ASGNOP NT_EXPR
    4       | NT_CMD TM_SEMICOL NT_CMD
    5       | TM_IF TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_COLON NT_CMD TM_ELSE TM_COLON NT_CMD
    6       | TM_IF TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_COLON NT_CMD
    7       | TM_CONTINUE
    8       | TM_BREAK
    9       | TM_SKIP

   10 NT_EXPR_LIST: NT_EXPR
   11             | NT_EXPR TM_COMMA NT_EXPR_LIST

   12 NT_EXPR_2: TM_NAT
   13          | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   14          | TM_IDENT TM_LEFT_PAREN NT_EXPR_LIST TM_RIGHT_PAREN
   15          | TM_IDENT
   16          | TM_NOT NT_EXPR_2
   17          | TM_MINUS NT_EXPR_2

   18 NT_EXPR: NT_EXPR_2
   19        | NT_EXPR TM_MUL NT_EXPR
   20        | NT_EXPR TM_PLUS NT_EXPR
   21        | NT_EXPR TM_MINUS NT_EXPR
   22        | NT_EXPR TM_DIV NT_EXPR
   23        | NT_EXPR TM_MOD NT_EXPR
   24        | NT_EXPR TM_LT NT_EXPR
   25        | NT_EXPR TM_GT NT_EXPR
   26        | NT_EXPR TM_LE NT_EXPR
   27        | NT_EXPR TM_GE NT_EXPR
   28        | NT_EXPR TM_EQ NT_EXPR
   29        | NT_EXPR TM_NE NT_EXPR
   30        | NT_EXPR TM_AND NT_EXPR
   31        | NT_EXPR TM_OR NT_EXPR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TM_NAT <n> (258) 12
    TM_IDENT <i> (259) 2 14 15
    TM_LEFT_BRACE <none> (260)
    TM_RIGHT_BRACE <none> (261)
    TM_COLON <none> (262) 5 6
    TM_COMMA <none> (263) 11
    TM_CONTINUE <none> (264) 7
    TM_BREAK <none> (265) 8
    TM_SKIP <none> (266) 9
    TM_SEMICOL <none> (267) 4
    TM_LOOP_INIT <none> (268)
    TM_LOOP_BODY <none> (269)
    TM_MALLOC <none> (270)
    TM_RI <none> (271)
    TM_RC <none> (272)
    TM_WI <none> (273)
    TM_WC <none> (274)
    TM_VAR <none> (275) 2
    TM_IF <none> (276) 5 6
    TM_THEN <none> (277)
    TM_ELSE <none> (278) 5
    TM_WHILE <none> (279)
    TM_DO <none> (280)
    TM_ASGNOP <none> (281) 3
    TM_OR <none> (282) 31
    TM_AND <none> (283) 30
    TM_NOT <none> (284) 16
    TM_LT <none> (285) 24
    TM_LE <none> (286) 26
    TM_GT <none> (287) 25
    TM_GE <none> (288) 27
    TM_EQ <none> (289) 28
    TM_NE <none> (290) 29
    TM_PLUS <none> (291) 20
    TM_MINUS <none> (292) 17 21
    TM_MUL <none> (293) 19
    TM_DIV <none> (294) 22
    TM_MOD <none> (295) 23
    TM_LEFT_PAREN (296) 5 6 13 14
    TM_RIGHT_PAREN (297) 5 6 13 14


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    NT_WHOLE <c> (44)
        on left: 1
        on right: 0
    NT_CMD <c> (45)
        on left: 2 3 4 5 6 7 8 9
        on right: 1 4 5 6
    NT_EXPR_LIST <e_l> (46)
        on left: 10 11
        on right: 11 14
    NT_EXPR_2 <e> (47)
        on left: 12 13 14 15 16 17
        on right: 16 17 18
    NT_EXPR <e> (48)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31
        on right: 3 5 6 10 11 13 19 20 21 22 23 24 25 26 27 28 29 30 31


State 0

    0 $accept: . NT_WHOLE $end

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_CONTINUE    shift, and go to state 3
    TM_BREAK       shift, and go to state 4
    TM_SKIP        shift, and go to state 5
    TM_VAR         shift, and go to state 6
    TM_IF          shift, and go to state 7
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_WHOLE   go to state 11
    NT_CMD     go to state 12
    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 14


State 1

   12 NT_EXPR_2: TM_NAT .

    $default  reduce using rule 12 (NT_EXPR_2)


State 2

   14 NT_EXPR_2: TM_IDENT . TM_LEFT_PAREN NT_EXPR_LIST TM_RIGHT_PAREN
   15          | TM_IDENT .

    TM_LEFT_PAREN  shift, and go to state 15

    $default  reduce using rule 15 (NT_EXPR_2)


State 3

    7 NT_CMD: TM_CONTINUE .

    $default  reduce using rule 7 (NT_CMD)


State 4

    8 NT_CMD: TM_BREAK .

    $default  reduce using rule 8 (NT_CMD)


State 5

    9 NT_CMD: TM_SKIP .

    $default  reduce using rule 9 (NT_CMD)


State 6

    2 NT_CMD: TM_VAR . TM_IDENT

    TM_IDENT  shift, and go to state 16


State 7

    5 NT_CMD: TM_IF . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_COLON NT_CMD TM_ELSE TM_COLON NT_CMD
    6       | TM_IF . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_COLON NT_CMD

    TM_LEFT_PAREN  shift, and go to state 17


State 8

   16 NT_EXPR_2: TM_NOT . NT_EXPR_2

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 18


State 9

   17 NT_EXPR_2: TM_MINUS . NT_EXPR_2

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 19


State 10

   13 NT_EXPR_2: TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 20


State 11

    0 $accept: NT_WHOLE . $end

    $end  shift, and go to state 21


State 12

    1 NT_WHOLE: NT_CMD .
    4 NT_CMD: NT_CMD . TM_SEMICOL NT_CMD

    TM_SEMICOL  shift, and go to state 22

    $default  reduce using rule 1 (NT_WHOLE)


State 13

   18 NT_EXPR: NT_EXPR_2 .

    $default  reduce using rule 18 (NT_EXPR)


State 14

    3 NT_CMD: NT_EXPR . TM_ASGNOP NT_EXPR
   19 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   20        | NT_EXPR . TM_PLUS NT_EXPR
   21        | NT_EXPR . TM_MINUS NT_EXPR
   22        | NT_EXPR . TM_DIV NT_EXPR
   23        | NT_EXPR . TM_MOD NT_EXPR
   24        | NT_EXPR . TM_LT NT_EXPR
   25        | NT_EXPR . TM_GT NT_EXPR
   26        | NT_EXPR . TM_LE NT_EXPR
   27        | NT_EXPR . TM_GE NT_EXPR
   28        | NT_EXPR . TM_EQ NT_EXPR
   29        | NT_EXPR . TM_NE NT_EXPR
   30        | NT_EXPR . TM_AND NT_EXPR
   31        | NT_EXPR . TM_OR NT_EXPR

    TM_ASGNOP  shift, and go to state 23
    TM_OR      shift, and go to state 24
    TM_AND     shift, and go to state 25
    TM_LT      shift, and go to state 26
    TM_LE      shift, and go to state 27
    TM_GT      shift, and go to state 28
    TM_GE      shift, and go to state 29
    TM_EQ      shift, and go to state 30
    TM_NE      shift, and go to state 31
    TM_PLUS    shift, and go to state 32
    TM_MINUS   shift, and go to state 33
    TM_MUL     shift, and go to state 34
    TM_DIV     shift, and go to state 35
    TM_MOD     shift, and go to state 36


State 15

   14 NT_EXPR_2: TM_IDENT TM_LEFT_PAREN . NT_EXPR_LIST TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_LIST  go to state 37
    NT_EXPR_2     go to state 13
    NT_EXPR       go to state 38


State 16

    2 NT_CMD: TM_VAR TM_IDENT .

    $default  reduce using rule 2 (NT_CMD)


State 17

    5 NT_CMD: TM_IF TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN TM_COLON NT_CMD TM_ELSE TM_COLON NT_CMD
    6       | TM_IF TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN TM_COLON NT_CMD

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 39


State 18

   16 NT_EXPR_2: TM_NOT NT_EXPR_2 .

    $default  reduce using rule 16 (NT_EXPR_2)


State 19

   17 NT_EXPR_2: TM_MINUS NT_EXPR_2 .

    $default  reduce using rule 17 (NT_EXPR_2)


State 20

   13 NT_EXPR_2: TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN
   19 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   20        | NT_EXPR . TM_PLUS NT_EXPR
   21        | NT_EXPR . TM_MINUS NT_EXPR
   22        | NT_EXPR . TM_DIV NT_EXPR
   23        | NT_EXPR . TM_MOD NT_EXPR
   24        | NT_EXPR . TM_LT NT_EXPR
   25        | NT_EXPR . TM_GT NT_EXPR
   26        | NT_EXPR . TM_LE NT_EXPR
   27        | NT_EXPR . TM_GE NT_EXPR
   28        | NT_EXPR . TM_EQ NT_EXPR
   29        | NT_EXPR . TM_NE NT_EXPR
   30        | NT_EXPR . TM_AND NT_EXPR
   31        | NT_EXPR . TM_OR NT_EXPR

    TM_OR           shift, and go to state 24
    TM_AND          shift, and go to state 25
    TM_LT           shift, and go to state 26
    TM_LE           shift, and go to state 27
    TM_GT           shift, and go to state 28
    TM_GE           shift, and go to state 29
    TM_EQ           shift, and go to state 30
    TM_NE           shift, and go to state 31
    TM_PLUS         shift, and go to state 32
    TM_MINUS        shift, and go to state 33
    TM_MUL          shift, and go to state 34
    TM_DIV          shift, and go to state 35
    TM_MOD          shift, and go to state 36
    TM_RIGHT_PAREN  shift, and go to state 40


State 21

    0 $accept: NT_WHOLE $end .

    $default  accept


State 22

    4 NT_CMD: NT_CMD TM_SEMICOL . NT_CMD

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_CONTINUE    shift, and go to state 3
    TM_BREAK       shift, and go to state 4
    TM_SKIP        shift, and go to state 5
    TM_VAR         shift, and go to state 6
    TM_IF          shift, and go to state 7
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_CMD     go to state 41
    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 14


State 23

    3 NT_CMD: NT_EXPR TM_ASGNOP . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 42


State 24

   31 NT_EXPR: NT_EXPR TM_OR . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 43


State 25

   30 NT_EXPR: NT_EXPR TM_AND . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 44


State 26

   24 NT_EXPR: NT_EXPR TM_LT . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 45


State 27

   26 NT_EXPR: NT_EXPR TM_LE . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 46


State 28

   25 NT_EXPR: NT_EXPR TM_GT . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 47


State 29

   27 NT_EXPR: NT_EXPR TM_GE . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 48


State 30

   28 NT_EXPR: NT_EXPR TM_EQ . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 49


State 31

   29 NT_EXPR: NT_EXPR TM_NE . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 50


State 32

   20 NT_EXPR: NT_EXPR TM_PLUS . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 51


State 33

   21 NT_EXPR: NT_EXPR TM_MINUS . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 52


State 34

   19 NT_EXPR: NT_EXPR TM_MUL . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 53


State 35

   22 NT_EXPR: NT_EXPR TM_DIV . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 54


State 36

   23 NT_EXPR: NT_EXPR TM_MOD . NT_EXPR

    TM_NAT         shift, and go to state 1
    TM_IDENT       shift, and go to state 2
    TM_NOT         shift, and go to state 8
    TM_MINUS       shift, and go to state 9
    TM_LEFT_PAREN  shift, and go to state 10

    NT_EXPR_2  go to state 13
    NT_EXPR    go to state 55


State 37

   14 NT_EXPR_2: TM_IDENT TM_LEFT_PAREN NT_EXPR_LIST . TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 56


State 38

   10 NT_EXPR_LIST: NT_EXPR .
   11             | NT_EXPR . TM_COMMA NT_EXPR_LIST
   19 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   20        | NT_EXPR . TM_PLUS NT_EXPR
   21        | NT_EXPR . TM_MINUS NT_EXPR
   22        | NT_EXPR . TM_DIV NT_EXPR
   23        | NT_EXPR . TM_MOD NT_EXPR
   24        | NT_EXPR . TM_LT NT_EXPR
   25        | NT_EXPR . TM_GT NT_EXPR
   26        | NT_EXPR . TM_LE NT_EXPR
   27        | NT_EXPR . TM_GE NT_EXPR
   28        | NT_EXPR . TM_EQ NT_EXPR
   29        | NT_EXPR . TM_NE NT_EXPR
   30        | NT_EXPR . TM_AND NT_EXPR
   31        | NT_EXPR . TM_OR NT_EXPR

    TM_COMMA  shift, and go to state 57
    TM_OR     shift, and go to state 24
    TM_AND    shift, and go to state 25
    TM_LT     shift, and go to state 26
    TM_LE     shift, and go to state 27
    TM_GT     shift, and go to state 28
    TM_GE     shift, and go to state 29
    TM_EQ     shift, and go to state 30
    TM_NE     shift, and go to state 31
    TM_PLUS   shift, and go to state 32
    TM_MINUS  shift, and go to state 33
    TM_MUL    shift, and go to state 34
    TM_DIV    shift, and go to state 35
    TM_MOD    shift, and go to state 36

    $default  reduce using rule 10 (NT_EXPR_LIST)


State 39

    5 NT_CMD: TM_IF TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN TM_COLON NT_CMD TM_ELSE TM_COLON NT_CMD
    6       | TM_IF TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN TM_COLON NT_CMD
   19 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   20        | NT_EXPR . TM_PLUS NT_EXPR
   21        | NT_EXPR . TM_MINUS NT_EXPR
   22        | NT_EXPR . TM_DIV NT_EXPR
   23        | NT_EXPR . TM_MOD NT_EXPR
   24        | NT_EXPR . TM_LT NT_EXPR
   25        | NT_EXPR . TM_GT NT_EXPR
   26        | NT_EXPR . TM_LE NT_EXPR
   27        | NT_EXPR . TM_GE NT_EXPR
   28        | NT_EXPR . TM_EQ NT_EXPR
   29        | NT_EXPR . TM_NE NT_EXPR
   30        | NT_EXPR . TM_AND NT_EXPR
   31        | NT_EXPR . TM_OR NT_EXPR

    TM_OR           shift, and go to state 24
    TM_AND          shift, and go to state 25
    TM_LT           shift, and go to state 26
    TM_LE           shift, and go to state 27
    TM_GT           shift, and go to state 28
    TM_GE           shift, and go to state 29
    TM_EQ           shift, and go to state 30
    TM_NE           shift, and go to state 31
    TM_PLUS         shift, and go to state 32
    TM_MINUS        shift, and go to state 33
    TM_MUL          shift, and go to state 34
    TM_DIV          shift, and go to state 35
    TM_MOD          shift, and go to state 36
    TM_RIGHT_PAREN  shift, and go to state 58


State 40

   13 NT_EXPR_2: TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN .

    $default  reduce using rule 13 (NT_EXPR_2)


State 41

    4 NT_CMD: NT_CMD . TM_SEMICOL NT_CMD
    4       | NT_CMD TM_SEMICOL NT_CMD .

    TM_SEMICOL  shift, and go to state 22

    $default  reduce using rule 4 (NT_CMD)


State 42

    3 NT_CMD: NT_EXPR TM_ASGNOP NT_EXPR .
   19 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   20        | NT_EXPR . TM_PLUS NT_EXPR
   21        | NT_EXPR . TM_MINUS NT_EXPR
   22        | NT_EXPR . TM_DIV NT_EXPR
   23        | NT_EXPR . TM_MOD NT_EXPR
   24        | NT_EXPR . TM_LT NT_EXPR
   25        | NT_EXPR . TM_GT NT_EXPR
   26        | NT_EXPR . TM_LE NT_EXPR
   27        | NT_EXPR . TM_GE NT_EXPR
   28        | NT_EXPR . TM_EQ NT_EXPR
   29        | NT_EXPR . TM_NE NT_EXPR
   30        | NT_EXPR . TM_AND NT_EXPR
   31        | NT_EXPR . TM_OR NT_EXPR

    TM_OR     shift, and go to state 24
    TM_AND    shift, and go to state 25
    TM_LT     shift, and go to state 26
    TM_LE     shift, and go to state 27
    TM_GT     shift, and go to state 28
    TM_GE     shift, and go to state 29
    TM_EQ     shift, and go to state 30
    TM_NE     shift, and go to state 31
    TM_PLUS   shift, and go to state 32
    TM_MINUS  shift, and go to state 33
    TM_MUL    shift, and go to state 34
    TM_DIV    shift, and go to state 35
    TM_MOD    shift, and go to state 36

    $default  reduce using rule 3 (NT_CMD)


State 43

   19 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   20        | NT_EXPR . TM_PLUS NT_EXPR
   21        | NT_EXPR . TM_MINUS NT_EXPR
   22        | NT_EXPR . TM_DIV NT_EXPR
   23        | NT_EXPR . TM_MOD NT_EXPR
   24        | NT_EXPR . TM_LT NT_EXPR
   25        | NT_EXPR . TM_GT NT_EXPR
   26        | NT_EXPR . TM_LE NT_EXPR
   27        | NT_EXPR . TM_GE NT_EXPR
   28        | NT_EXPR . TM_EQ NT_EXPR
   29        | NT_EXPR . TM_NE NT_EXPR
   30        | NT_EXPR . TM_AND NT_EXPR
   31        | NT_EXPR . TM_OR NT_EXPR
   31        | NT_EXPR TM_OR NT_EXPR .

    TM_AND    shift, and go to state 25
    TM_LT     shift, and go to state 26
    TM_LE     shift, and go to state 27
    TM_GT     shift, and go to state 28
    TM_GE     shift, and go to state 29
    TM_EQ     shift, and go to state 30
    TM_NE     shift, and go to state 31
    TM_PLUS   shift, and go to state 32
    TM_MINUS  shift, and go to state 33
    TM_MUL    shift, and go to state 34
    TM_DIV    shift, and go to state 35
    TM_MOD    shift, and go to state 36

    $default  reduce using rule 31 (NT_EXPR)


State 44

   19 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   20        | NT_EXPR . TM_PLUS NT_EXPR
   21        | NT_EXPR . TM_MINUS NT_EXPR
   22        | NT_EXPR . TM_DIV NT_EXPR
   23        | NT_EXPR . TM_MOD NT_EXPR
   24        | NT_EXPR . TM_LT NT_EXPR
   25        | NT_EXPR . TM_GT NT_EXPR
   26        | NT_EXPR . TM_LE NT_EXPR
   27        | NT_EXPR . TM_GE NT_EXPR
   28        | NT_EXPR . TM_EQ NT_EXPR
   29        | NT_EXPR . TM_NE NT_EXPR
   30        | NT_EXPR . TM_AND NT_EXPR
   30        | NT_EXPR TM_AND NT_EXPR .
   31        | NT_EXPR . TM_OR NT_EXPR

    TM_LT     shift, and go to state 26
    TM_LE     shift, and go to state 27
    TM_GT     shift, and go to state 28
    TM_GE     shift, and go to state 29
    TM_EQ     shift, and go to state 30
    TM_NE     shift, and go to state 31
    TM_PLUS   shift, and go to state 32
    TM_MINUS  shift, and go to state 33
    TM_MUL    shift, and go to state 34
    TM_DIV    shift, and go to state 35
    TM_MOD    shift, and go to state 36

    $default  reduce using rule 30 (NT_EXPR)


State 45

   19 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   20        | NT_EXPR . TM_PLUS NT_EXPR
   21        | NT_EXPR . TM_MINUS NT_EXPR
   22        | NT_EXPR . TM_DIV NT_EXPR
   23        | NT_EXPR . TM_MOD NT_EXPR
   24        | NT_EXPR . TM_LT NT_EXPR
   24        | NT_EXPR TM_LT NT_EXPR .
   25        | NT_EXPR . TM_GT NT_EXPR
   26        | NT_EXPR . TM_LE NT_EXPR
   27        | NT_EXPR . TM_GE NT_EXPR
   28        | NT_EXPR . TM_EQ NT_EXPR
   29        | NT_EXPR . TM_NE NT_EXPR
   30        | NT_EXPR . TM_AND NT_EXPR
   31        | NT_EXPR . TM_OR NT_EXPR

    TM_PLUS   shift, and go to state 32
    TM_MINUS  shift, and go to state 33
    TM_MUL    shift, and go to state 34
    TM_DIV    shift, and go to state 35
    TM_MOD    shift, and go to state 36

    $default  reduce using rule 24 (NT_EXPR)


State 46

   19 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   20        | NT_EXPR . TM_PLUS NT_EXPR
   21        | NT_EXPR . TM_MINUS NT_EXPR
   22        | NT_EXPR . TM_DIV NT_EXPR
   23        | NT_EXPR . TM_MOD NT_EXPR
   24        | NT_EXPR . TM_LT NT_EXPR
   25        | NT_EXPR . TM_GT NT_EXPR
   26        | NT_EXPR . TM_LE NT_EXPR
   26        | NT_EXPR TM_LE NT_EXPR .
   27        | NT_EXPR . TM_GE NT_EXPR
   28        | NT_EXPR . TM_EQ NT_EXPR
   29        | NT_EXPR . TM_NE NT_EXPR
   30        | NT_EXPR . TM_AND NT_EXPR
   31        | NT_EXPR . TM_OR NT_EXPR

    TM_PLUS   shift, and go to state 32
    TM_MINUS  shift, and go to state 33
    TM_MUL    shift, and go to state 34
    TM_DIV    shift, and go to state 35
    TM_MOD    shift, and go to state 36

    $default  reduce using rule 26 (NT_EXPR)


State 47

   19 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   20        | NT_EXPR . TM_PLUS NT_EXPR
   21        | NT_EXPR . TM_MINUS NT_EXPR
   22        | NT_EXPR . TM_DIV NT_EXPR
   23        | NT_EXPR . TM_MOD NT_EXPR
   24        | NT_EXPR . TM_LT NT_EXPR
   25        | NT_EXPR . TM_GT NT_EXPR
   25        | NT_EXPR TM_GT NT_EXPR .
   26        | NT_EXPR . TM_LE NT_EXPR
   27        | NT_EXPR . TM_GE NT_EXPR
   28        | NT_EXPR . TM_EQ NT_EXPR
   29        | NT_EXPR . TM_NE NT_EXPR
   30        | NT_EXPR . TM_AND NT_EXPR
   31        | NT_EXPR . TM_OR NT_EXPR

    TM_PLUS   shift, and go to state 32
    TM_MINUS  shift, and go to state 33
    TM_MUL    shift, and go to state 34
    TM_DIV    shift, and go to state 35
    TM_MOD    shift, and go to state 36

    $default  reduce using rule 25 (NT_EXPR)


State 48

   19 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   20        | NT_EXPR . TM_PLUS NT_EXPR
   21        | NT_EXPR . TM_MINUS NT_EXPR
   22        | NT_EXPR . TM_DIV NT_EXPR
   23        | NT_EXPR . TM_MOD NT_EXPR
   24        | NT_EXPR . TM_LT NT_EXPR
   25        | NT_EXPR . TM_GT NT_EXPR
   26        | NT_EXPR . TM_LE NT_EXPR
   27        | NT_EXPR . TM_GE NT_EXPR
   27        | NT_EXPR TM_GE NT_EXPR .
   28        | NT_EXPR . TM_EQ NT_EXPR
   29        | NT_EXPR . TM_NE NT_EXPR
   30        | NT_EXPR . TM_AND NT_EXPR
   31        | NT_EXPR . TM_OR NT_EXPR

    TM_PLUS   shift, and go to state 32
    TM_MINUS  shift, and go to state 33
    TM_MUL    shift, and go to state 34
    TM_DIV    shift, and go to state 35
    TM_MOD    shift, and go to state 36

    $default  reduce using rule 27 (NT_EXPR)


State 49

   19 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   20        | NT_EXPR . TM_PLUS NT_EXPR
   21        | NT_EXPR . TM_MINUS NT_EXPR
   22        | NT_EXPR . TM_DIV NT_EXPR
   23        | NT_EXPR . TM_MOD NT_EXPR
   24        | NT_EXPR . TM_LT NT_EXPR
   25        | NT_EXPR . TM_GT NT_EXPR
   26        | NT_EXPR . TM_LE NT_EXPR
   27        | NT_EXPR . TM_GE NT_EXPR
   28        | NT_EXPR . TM_EQ NT_EXPR
   28        | NT_EXPR TM_EQ NT_EXPR .
   29        | NT_EXPR . TM_NE NT_EXPR
   30        | NT_EXPR . TM_AND NT_EXPR
   31        | NT_EXPR . TM_OR NT_EXPR

    TM_PLUS   shift, and go to state 32
    TM_MINUS  shift, and go to state 33
    TM_MUL    shift, and go to state 34
    TM_DIV    shift, and go to state 35
    TM_MOD    shift, and go to state 36

    $default  reduce using rule 28 (NT_EXPR)


State 50

   19 NT_EXPR: NT_EXPR . TM_MUL NT_EXPR
   20        | NT_EXPR . TM_PLUS NT_EXPR
   21        | NT_EXPR . TM_MINUS NT_EXPR
   22        | NT_EXPR . TM_DIV NT_EXPR
   23        | NT_EXPR . TM_MOD NT_EXPR
   24        | NT_EXPR . TM_LT NT_EXPR
   25        | NT_EXPR . TM_GT NT_EXPR
   26        | NT_EXPR . TM_LE NT_EXPR
   27        | NT_EXPR . TM_GE NT_EXPR
   28        | NT_EXPR . TM_EQ NT_EXPR
   29        | NT_EXPR . TM_NE NT_EXPR
   29        | NT_EXPR TM_NE NT_EXPR .
   30        | NT_EXPR . TM_AND NT_EXPR
   31        | NT_EXPR . TM_OR NT_EXPR

    TM_PLUS   shift, and go to state 32
    TM_MINUS  shift, and go to state 33
    TM_MUL    shift, and go to state 34
    TM_DIV    shift, and go to state 35
    TM_MOD    shift, and go to state 36

    $default  reduce using rule 29 (NT_EXPR)


State 51
